--- a/src/main/resources/fxml/graphic.fxml
+++ b/src/main/resources/fxml/graphic.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="550.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saska.stabsputnikapp.controller.GraphController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="550.0" style="-fx-background-color: WHITE;" styleClass="chart-series-line" stylesheets="/css/stylesheet.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.saska.stabsputnikapp.controller.GraphController">
    <children>
        <LineChart fx:id="lineChart" layoutX="25.0" layoutY="10.0" title="PID regulator">
         <xAxis>
