--- a/src/main/resources/fxml/headFormApp.fxml
+++ b/src/main/resources/fxml/headFormApp.fxml
@@ -48,7 +48,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button id="line" fx:id="buildGraph" layoutX="25.0" layoutY="406.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="250.0" stylesheets="/css/stylesheet.css" text="Plot">
+            <Button id="line" fx:id="buildChart" layoutX="25.0" layoutY="406.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="250.0" stylesheets="/css/stylesheet.css" text="Plot">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -59,10 +59,10 @@
                </cursor>
             </Button>
             <JFXTextArea fx:id="dataComPort" layoutX="25.0" layoutY="73.0" prefHeight="129.0" prefWidth="250.0" promptText="Revolutions cooler"/>
-            <JFXTextArea fx:id="resultWrite" layoutX="25.0" layoutY="246.0" prefHeight="15.0" prefWidth="250.0" promptText="Result" />
+            <JFXTextArea fx:id="resultWrite" layoutX="25.0" layoutY="246.0" prefHeight="15.0" prefWidth="250.0" promptText="Result send..." />
             <JFXTextField fx:id="kP" layoutX="70.0" layoutY="302.0" prefHeight="25.0" prefWidth="31.0" promptText="  Kp" />
             <JFXTextField fx:id="inputSetPoint" layoutX="152.0" layoutY="351.0" prefHeight="25.0" prefWidth="123.0" promptText="Enter a desired Hz" />
-            <JFXToggleButton fx:id="openclose" graphicTextGap="5.0" layoutX="100.0" layoutY="25.0" size="8.0" text="Close port" toggleColor="#004c68" toggleLineColor="#067097"/>
+            <JFXToggleButton fx:id="openOrClose" graphicTextGap="5.0" layoutX="100.0" layoutY="25.0" size="8.0" text="Close port" toggleColor="#004c68" toggleLineColor="#067097"/>
             <JFXTextField fx:id="kI" layoutX="158.0" layoutY="302.0" prefHeight="25.0" prefWidth="31.0" promptText="  Ki" />
             <JFXTextField fx:id="kD" layoutX="244.0" layoutY="302.0" prefHeight="25.0" prefWidth="31.0" promptText="  Kd" />
             <Button id="line" fx:id="setKoeffI" layoutX="113.0" layoutY="303.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="38.0" stylesheets="/css/stylesheet.css" text="OK">
@@ -83,7 +83,7 @@
                 <NumberAxis fx:id="yAxis" side="LEFT" />
               </yAxis>
             </LineChart>
-            <JFXButton fx:id="clearGraph" layoutX="721.0" layoutY="47.0" text="Clear" />
+            <JFXButton fx:id="clearChart" layoutX="721.0" layoutY="47.0" text="Clear" />
           </children>
          <effect>
             <Blend />
